Fix new button on small view

--- a/media/css/basic.css
+++ b/media/css/basic.css
@@ -29,15 +29,6 @@ main {
   margin-bottom: 3em;
 }
 
-@media screen and (min-width: 768px){
-
-  #do-index main, #do-index header nav {
-    width: 60%; max-width: 1200px;
-    margin-left: auto; margin-right: auto;
-  }
-
-}
-
 #do-index header nav ul {
   display: block!important; /* fuuuuuuuck you flexbox */
   margin: none!important; padding: none!important;
@@ -48,7 +39,6 @@ main {
 #do-index #do-new {
   border: 1px solid black;
   border-radius: 8px;
-  float: left; width: 25%;
   font-weight: bold;
   display: inline-block;
 }
@@ -66,10 +56,6 @@ main {
   content: "+ ";
 }
 
-#do-index #do-examples {
-  width: 70%;
-  float: left;
-}
 #do-index #do-examples span {
   display: block;
   padding: 0; margin: 0 0 0.6em 0;
@@ -81,4 +67,22 @@ main {
 }
 #do-index #do-examples li a {
   text-decoration: underline;
+}
+
+@media screen and (min-width: 768px){
+
+  #do-index main, #do-index header nav {
+    width: 60%; max-width: 1200px;
+    margin-left: auto; margin-right: auto;
+  }
+  
+  #do-index #do-new {
+    float: left; width: 25%;
+  }
+  #do-index #do-examples {
+    width: 70%;
+    float: left;
+  }
+  
+
 }
